# mp_tool

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
db/: connections.py
helpers/: telegram.py
parsers/: baza_cen.py  connect_cards.py  major.py  stores_stock.py  voronka_wb.py
repricers/lm/: api_client.py  lm_repricer.py
repricers/wb/: api_client.py  wb_repricer.py
